--- a/UdemyHTML.html
+++ b/UdemyHTML.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>$Title$</title>
+    <link rel="stylesheet" href="UdemyCSS.css">
 </head>
 <body>
-$END$
+
 </body>
 </html>
